fix profile pic closeup alignment
default display: inline of an img always leaves out some extra space at the bottom of an img due to characteristic of an inline element to leave space for descenders in text (think of the tails of g, y, q, etc.). display: block fixes it.

--- a/site/css/components/site-title.css
+++ b/site/css/components/site-title.css
@@ -74,7 +74,8 @@
 }
 
 .profile-pic-closeup {
-    width: 80px;
+    display: block;
+    width: 40px;
     height: auto;
     outline: none;
 }
